tests/machine/x/cobol/record_assign.error
/tmp/TestCobolCompiler_VMValid_Golden3313344715/042/prog.cob:13: error: syntax error, unexpected USING
/tmp/TestCobolCompiler_VMValid_Golden3313344715/042/prog.cob: in paragraph 'FN_INC':
/tmp/TestCobolCompiler_VMValid_Golden3313344715/042/prog.cob:19: error: syntax error, unexpected PROCEDURE
/tmp/TestCobolCompiler_VMValid_Golden3313344715/042/prog.cob:20: error: 'C-N' is not defined
